--- a/Vue/package.json
+++ b/Vue/package.json
@@ -10,11 +10,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "axios": "^0.21.0",
-    "js-cookie": "^2.2.1",
     "vue-meditor": "^2.1.1",
-    "vue-waterfall2": "^1.10.1",
-    "vuex-persistedstate": "^4.0.0-beta.3"
+    "vue-waterfall2": "^1.10.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
