--- a/Vue/package.json
+++ b/Vue/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "emoji-js": "^3.5.0",
     "vue-waterfall2": "^1.10.1"
   },
   "devDependencies": {
