--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 .DS_Store
 Vue/node_modules/
 Vue/dist/
-React-Admin/node_modules
+Admin/node_modules
 Server/Config
 npm-debug.log*
 yarn-debug.log*
