--- a/Admin/package.json
+++ b/Admin/package.json
@@ -4,19 +4,16 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.1.2",
-    "@tailwindcss/postcss7-compat": "^2.1.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.15.4",
-    "autoprefixer": "^9.8.6",
     "axios": "^0.21.1",
     "craco-less": "^1.17.1",
     "echarts": "^5.1.1",
     "echarts-for-react": "^3.0.1",
     "http-proxy-middleware": "^1.3.1",
     "js-cookie": "^2.2.1",
-    "postcss": "^7.0.35",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-config": "^5.1.1",
@@ -24,7 +21,6 @@
     "react-scripts": "^4.0.3",
     "redux": "^4.1.0",
     "redux-react-hook": "^4.0.3",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -52,6 +48,10 @@
     ]
   },
   "devDependencies": {
-    "http-proxy-middleware": "^1.3.1"
+    "@tailwindcss/postcss7-compat": "^2.2.17",
+    "autoprefixer": "^9.8.8",
+    "http-proxy-middleware": "^1.3.1",
+    "postcss": "^7.0.39",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
   }
 }
