--- a/Vue/package.json
+++ b/Vue/package.json
@@ -10,11 +10,14 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "autoprefixer": "^9",
+    "core-js": "^3.19.2",
     "emoji-js": "^3.5.0",
+    "postcss": "^7",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "vue-waterfall2": "^1.10.1"
   },
   "devDependencies": {
-    "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-loader": "^7.1.1",
@@ -26,6 +29,7 @@
     "chalk": "^2.0.1",
     "compression-webpack-plugin": "^1.1.11",
     "copy-webpack-plugin": "^4.0.1",
+    "core-js": "^3.19.2",
     "css-loader": "^0.28.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
