--- a/Vue/package.json
+++ b/Vue/package.json
@@ -9,21 +9,17 @@
     "start": "npm run dev",
     "build": "node build/build.js"
   },
-  "dependencies": {
-    "autoprefixer": "^9",
-    "core-js": "^3.19.2",
-    "emoji-js": "^3.5.0",
-    "postcss": "^7",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
-    "vue-waterfall2": "^1.10.1"
-  },
+  "dependencies": {},
   "devDependencies": {
+    "autoprefixer": "^9",
+    "axios": "^0.24.0",
     "babel-core": "^6.22.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-loader": "^7.1.1",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-plugin-transform-vue-jsx": "^3.5.0",
+    
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "chalk": "^2.0.1",
@@ -37,10 +33,11 @@
     "html-webpack-plugin": "^2.30.1",
     "mockjs": "^1.1.0",
     "node-notifier": "^5.1.2",
-    "node-sass": "^4.14.1",
+    "node-sass": "4",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
+    "postcss": "^7",
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
@@ -49,6 +46,7 @@
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "style-loader": "^2.0.0",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.3.0",
