--- a/Admin/package.json
+++ b/Admin/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
+    "dayjs": "^1.10.7",
     "element-plus": "^1.2.0-beta.6",
     "qs": "^6.10.2",
     "vue": "^3.2.25",
