--- a/Vue/package.json
+++ b/Vue/package.json
@@ -9,7 +9,9 @@
     "start": "npm run dev",
     "build": "node build/build.js"
   },
-  "dependencies": {},
+  "dependencies": {
+    "dayjs": "^1.10.7"
+  },
   "devDependencies": {
     "autoprefixer": "^9",
     "axios": "^0.24.0",
@@ -19,7 +21,6 @@
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-plugin-transform-vue-jsx": "^3.5.0",
-    
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "chalk": "^2.0.1",
